--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9a598">  <td>23/06/06 14:05:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DELETE_API_Request.deleteAPIRequest()[pri:0, instance:com.automation_RestAPI_TestCases.DELETE_API_Request@3059cbc]">deleteAPIRequest</td> 
-  <td>main@1665197552</td>   <td></td> </tr>
+<tr bgcolor="866d69">  <td>23/06/09 18:03:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POST_API_Request_Using_Pojos.postAPIRequest()[pri:0, instance:com.automation_RestAPI_TestCases.POST_API_Request_Using_Pojos@7c24b813]">postAPIRequest</td> 
+  <td>main@2075809815</td>   <td></td> </tr>
 </table>
